Quorum/Library/Tests/Expressions/Fail/DataFrameError.quorum
use Libraries.Compute.Statistics.DataFrame

DataFrame frame

frame:Load("/Data/DarkSide.csv") // any data frame
output frame.ToText()  // using a dot gives a non-useful error message